# COAD

./: .clang-format  .gitignore  CMakeLists.txt  Changelist.md  OpenSolution.bat  Premake5.lua  Readme.md  Setup.bat
Assets/Shaders/: Basic.shader  NonAccelerationRT.shader
Docs/: Doxyfile
Scripts/: Config.lua  Deps.lua  External.lua
Scripts/Premake/: Config.lua  Deps.lua  External.lua
Snippets/: ResultEnforceCall.snippet  ResultEnforceCallNoLog.snippet  ResultEnsureCall.snippet  ResultEnsureCallNoLog.snippet  ResultError.snippet  ResultOk.snippet
Src/Asset/: AssetObject.cpp  AssetRegistry.cpp  Object.h  Registry.h
Src/Benchmark/: Entity.cpp  Main.cpp  Meta.cpp  Utils.cpp
Src/Cmd/: Main.cpp
Src/Core/: Algorithm.h  Allocator.cpp  Allocator.h  Any.h  Assert.h  BaseTypes.h  Common.cpp  Common.h  Compiler.h  ConstMap.h  Hash.h  IO.cpp  IO.h  Lang.h  Log.cpp  Log.h  Macros.h  Manager.h  Math.h  Memory.cpp  Memory.h  Paths.h  Platform.h  Ptr.h  RawBuffer.h  Reflection.h  Result.cpp  Result.h  Stacktrace.h  Stream.cpp  Stream.h  Thread.cpp  Thread.h  TypeInfo.cpp  TypeInfo.h  TypeTraits.h  Types.h
Src/ECS/: Component.cpp  Component.h  Registry.cpp  Registry.h
Src/Editor/: Common.h  Manager.h  ManagerEditor.cpp  imgui.h
Src/Editor/Windows/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h
Src/Engine/: Common.h  Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  Manager.cpp  Manager.h  ManagerEngine.cpp  ProgramArgs.cpp  ProgramArgs.h  Window.cpp  Window.h
Src/Meta/: ClassInfo.cpp  ClassInfo.h  CtorInfo.cpp  CtorInfo.h  EnumInfo.cpp  EnumInfo.h  Macros.h  Meta.h  MethodInfo.cpp  MethodInfo.h  ParamInfo.h  PropertyInfo.cpp  PropertyInfo.h  TypeInfo.cpp  TypeInfo.h  Value.cpp  Value.h
Src/Render/: Camera.h  Common.h  Manager.h  ManagerRender.cpp  ManagerWindows.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Src/Render/Windows/: Manager.h  OpenGLManager.h  VulkanManager.h
Src/Render/Windows/RaytracingHelpers/: BottomLevelASGenerator.cpp  RaytracingPipelineGenerator.cpp  RootSignatureGenerator.cpp  ShaderBindingTableGenerator.cpp  ShaderBindingTableGenerator.h  TopLevelASGenerator.cpp
Src/Render/Windows/Vulkan/: Allocator.h  Image.h  Manager.h  (+4 more)
Src/Unity/: Asset.unity.0.cpp  Core.unity.0.cpp  ECS.unity.0.cpp  Editor.unity.0.cpp  Engine.unity.0.cpp  Meta.unity.0.cpp  Render.unity.0.cpp
